initializing the dashboard with user data and favorite tracks; favorite tracks GET request implemented; sidebar with favorite tracks added; titleFilter added

--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -1,5 +1,45 @@
 <div class="background">
+    <md-toolbar>
+      <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
+        <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
+          <img ng-src="{{user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
+          <h3 class="avatar_name">{{user.full_name}}</h3>
+        </div>
+         <!-- <span flex></span> -->
+         <h2 layout layout-align="center center">
+           <i class="material-icons">cloud</i>
+           <span>&nbsp; SoundClouder</span>
+         </h2>
+         <!-- <span flex></span> -->
+         <md-button ng-click="logout()" layout layout-align="center center">
+           <span>Logout</span>
+           <i class="material-icons">power_settings_new</i>
+         </md-button>
+      </div>
+    </md-toolbar>
   <div layout>
-      <h2>Welcome {{first_name}}</h2>
+      <!-- <md-button class="md-raised" ng-click="getFavorites()">Get my favorites</md-button> -->
+      <md-sidenav
+        layout="column"
+        ng-click="ul.toggleList()"
+        md-component-id="left"
+        md-is-locked-open="$mdMedia('gt-sm')"
+        class="md-whiteframe-4dp" >
+
+        <md-list>
+          <md-list-item ng-repeat="track in favorites" ng-click="null">
+              <!-- <md-button ng-click="ul.selectUser(u)" ng-class="{'selected' : u === ul.selected }"> -->
+                <div layout="row" layout-align="start center" layout-margin>
+                  <div layout="column" layout-align="center">
+                    <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
+                    <img ng-if="!track.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-img"/>
+                  </div>
+                  <!-- <md-icon md-svg-icon="{{track.artwork_url}}" class="avatar"></md-icon> -->
+                  <div layout="column" layout-align="center">{{track.title | TitleFilter}}</div>
+                </div>
+              <!-- </md-button> -->
+          </md-list-item>
+        </md-list>
+      </md-sidenav>
   </div>
 </div>
