--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,20 @@ body{
   width: 100%;
   height: 100%;
 }
+
+.img-circle{
+  border-radius: 50%;
+}
+
+.avatar-img{
+  width: 45px;
+}
+
+.topbar-avatar{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.artwork-img{
+  width: 75px;
+}
