--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -1,42 +1,52 @@
-<div class="background">
-    <md-toolbar>
-      <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
-        <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
-          <img ng-src="{{user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
-          <h3 class="avatar_name">{{user.full_name}}</h3>
-        </div>
-         <!-- <span flex></span> -->
-         <h2 layout layout-align="center center">
-           <i class="material-icons">cloud</i>
-           <span>&nbsp; SoundClouder</span>
-         </h2>
-         <!-- <span flex></span> -->
-         <md-button ng-click="logout()" layout layout-align="center center">
-           <span>Logout</span>
-           <i class="material-icons">power_settings_new</i>
-         </md-button>
-      </div>
-    </md-toolbar>
-  <div layout>
-      <!-- <md-button class="md-raised" ng-click="getFavorites()">Get my favorites</md-button> -->
-      <md-sidenav
-        layout="column"
-        ng-click="ul.toggleList()"
-        md-component-id="left"
-        md-is-locked-open="$mdMedia('gt-sm')"
-        class="md-whiteframe-4dp" >
+<md-toolbar>
+  <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
+    <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
+      <img ng-src="{{user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
+      <h3 class="avatar_name">{{user.full_name}}</h3>
+    </div>
+     <!-- <span flex></span> -->
+     <h2 layout layout-align="center center">
+       <i class="material-icons">cloud</i>
+       <span>&nbsp; SoundClouder</span>
+     </h2>
+     <!-- <span flex></span> -->
+     <md-button ng-click="logout()" layout layout-align="center center">
+       <span>Logout</span>
+       <i class="material-icons">power_settings_new</i>
+     </md-button>
+  </div>
+</md-toolbar>
+<div layout="row" flex>
+    <!-- <md-button class="md-raised" ng-click="getFavorites()">Get my favorites</md-button> -->
+    <md-sidenav
+      ng-click=""
+      md-component-id="left"
+      md-is-locked-open="$mdMedia('gt-sm')"
+      class="md-whiteframe-4dp" >
 
         <md-list>
-          <md-list-item ng-repeat="track in favorites" ng-click="null">
-            <div layout="row" layout-align="start center" layout-margin>
+          <md-list-item ng-repeat="track in favorites" ng-click="selectTrack(track)">
+            <div layout="row" layout-align="start center" layout-margin ng-class="{'selected' : track === selectedTrack }">
               <div layout="column" layout-align="center">
-                <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
-                <img ng-if="!track.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-img"/>
+                <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-list-img"/>
+                <img ng-if="!track.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-list-img"/>
               </div>
               <div layout="column" layout-align="center">{{track.title | TitleFilter}}</div>
             </div>
           </md-list-item>
         </md-list>
-      </md-sidenav>
-  </div>
+    </md-sidenav>
+
+    <md-content flex id="content" ng-cloak>
+      <img ng-if="selectedTrack.artwork_url" ng-src="{{selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
+      <!-- <img ng-if="!selectedTrack.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-img"/> -->
+      <h2>{{selectedTrack.title}}</h2>
+      <h4 class="subtitle">Times played: {{selectedTrack.playback_count}}</h4>
+      <md-button class="md-primary" aria-label="Share with" md-no-ink ng-click="play()">
+        Play
+      </md-button>
+      <div id="playme">
+
+      </div>
+    </md-content>
 </div>
