--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -1,4 +1,4 @@
-<md-toolbar>
+<md-toolbar class="sc-gradient">
   <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
     <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
       <img ng-src="{{user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
