--- a/js/templates/login.html
+++ b/js/templates/login.html
@@ -2,7 +2,7 @@
   <md-card>
     <md-card-content>
       <h2 class="md-primary">Please login</h2>
-      <md-button class="md-primary md-raised" aria-label="Connect to SoundCloud" ng-click="connect()">
+      <md-button class="md-primary md-raised sc-gradient" aria-label="Connect to SoundCloud" ng-click="connect()">
         <div layout="row" layout-align="space-around center">
           <i class="material-icons">cloud</i>
           <span>&nbsp; Connect to SoundCloud</span>
