fa soundcloud icon

--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -6,7 +6,7 @@
     </div>
      <!-- <span flex></span> -->
      <h2 layout layout-align="center center">
-       <i class="material-icons">cloud</i>
+       <i class="fa fa-2x fa-soundcloud" aria-hidden="true"></i>
        <span>&nbsp; SoundClouder</span>
      </h2>
      <!-- <span flex></span> -->
