--- a/js/templates/login.html
+++ b/js/templates/login.html
@@ -4,7 +4,7 @@
       <h2 class="md-primary">Please login</h2>
       <md-button class="md-primary md-raised sc-gradient" aria-label="Connect to SoundCloud" ng-click="vm.connect()">
         <div layout="row" layout-align="space-around center">
-          <i class="material-icons">cloud</i>
+          <i class="fa fa-2x fa-soundcloud" aria-hidden="true"></i>
           <span>&nbsp; Connect to {{vm.naslov}}</span>
         </div>
       </md-button>
