adding volume buttons; functionality in progress

--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -44,6 +44,8 @@
       <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count}}</h4>
       <md-button class="md-primary" aria-label="Play sound" ng-click="vm.playSound()">Play</md-button>
       <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()">Pause</md-button>
+      <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.volumeUp()">Volume +</md-button>
+      <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.volumeDown()">Volume -</md-button>
       <div id="playme">
 
       </div>
