--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -41,11 +41,11 @@
       <img ng-if="vm.selectedTrack.artwork_url" ng-src="{{vm.selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
       <!-- <img ng-if="!selectedTrack.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-img"/> -->
       <h2>{{vm.selectedTrack.title}}</h2>
-      <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count}}</h4>
+      <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count | number}}</h4>
       <md-button class="md-primary" aria-label="Play sound" ng-click="vm.playSound()">Play</md-button>
       <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()">Pause</md-button>
-      <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.volumeUp()">Volume +</md-button>
-      <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.volumeDown()">Volume -</md-button>
+      <md-button class="md-primary" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
+      <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
       <div id="playme">
 
       </div>
