--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -38,16 +38,24 @@
     </md-sidenav>
 
     <md-content flex id="content" ng-cloak>
-      <img ng-if="vm.selectedTrack.artwork_url" ng-src="{{vm.selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
-      <!-- <img ng-if="!selectedTrack.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-img"/> -->
-      <h2>{{vm.selectedTrack.title}}</h2>
-      <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count | number}}</h4>
-      <md-button class="md-primary" aria-label="Play sound" ng-click="vm.playSound()">Play</md-button>
-      <md-button class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()">Pause</md-button>
-      <md-button class="md-primary" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
-      <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
-      <div id="playme">
+      <div layout="column">
+        <div layout="row" layout-align="start center">
+          <img ng-if="vm.selectedTrack.artwork_url" ng-src="{{vm.selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
+          <div id="selectedTrackTitle" layout="column" layout-align="center start">
+            <h2>{{vm.selectedTrack.title}}</h2>
+            <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count | number}}</h4>
+          </div>
+        </div>
+        <div layout="row">
+          <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Play sound" ng-click="vm.playSound()"><i class="material-icons">play_arrow</i>Play</md-button>
+          <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()"><i class="material-icons">pause</i>Pause</md-button>
+          <md-button class="md-primary" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
+          <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
+          <!-- <md-button class="md-primary" aria-label="Volume down" ng-click="vm.seek()">Seek</md-button> -->
+        </div>
+        <div id="playme">
 
+        </div>
       </div>
     </md-content>
 </div>
