--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -1,75 +1,79 @@
-<md-toolbar class="sc-gradient">
-  <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
-    <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
-      <img ng-src="{{vm.user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
-      <h3 class="avatar_name">{{vm.user.full_name}}</h3>
-    </div>
-     <!-- <span flex></span> -->
-     <h2 layout layout-align="center center">
-       <i class="fa fa-2x fa-soundcloud" aria-hidden="true"></i>
-       <span>&nbsp; SoundClouder</span>
-     </h2>
-     <!-- <span flex></span> -->
-     <md-button ng-click="vm.logout()" layout layout-align="center center">
-       <span>Logout</span>
-       <i class="material-icons">power_settings_new</i>
-     </md-button>
-  </div>
-</md-toolbar>
-<div layout="row" flex>
-    <!-- <md-button class="md-raised" ng-click="getFavorites()">Get my favorites</md-button> -->
-    <md-sidenav
-      ng-click=""
-      md-component-id="left"
-      md-is-locked-open="$mdMedia('gt-sm')"
-      class="md-whiteframe-4dp" >
-
-        <md-toolbar>
-          <h1 class="md-toolbar-tools">Liked Tracks</h1>
-        </md-toolbar>
-        <md-list>
-          <md-list-item ng-repeat="track in vm.favorites" ng-click="vm.selectTrack(track)">
-            <div layout="row" layout-align="start center" layout-margin ng-class="{'selected' : track === vm.selectedTrack }">
-              <div layout="column" layout-align="center">
-                <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-list-img"/>
-                <img ng-if="!track.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-list-img"/>
-              </div>
-              <div layout="column" layout-align="center">{{track.title | TitleFilter}}</div>
-            </div>
-          </md-list-item>
-        </md-list>
-    </md-sidenav>
-
-    <md-content flex id="content" ng-cloak>
-      <div layout="column">
-        <md-card>
-          <md-card-content>
-            <div layout="row" layout-align="start center">
-              <img ng-if="vm.selectedTrack.artwork_url" ng-src="{{vm.selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
-              <div id="selectedTrackTitle" layout="column" layout-align="center start">
-                <h2>{{vm.selectedTrack.title}}</h2>
-                <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count | number}}</h4>
-              </div>
-            </div>
-          </md-card-content>
-          <md-card-actions layout="row">
-              <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Stream sound" ng-click="vm.streamSound(vm.selectedTrack)">Stream</md-button>
-          </md-card-actions>
-        </md-card>
-        <md-card>
-          <md-card-content>
-            <div id="playme">
-              <h2>Playing track: {{vm.playingTrack.title}}</h2>
-              <div layout="row">
-                <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Play sound" ng-click="vm.playSound()"><i class="material-icons">play_arrow</i>Play</md-button>
-                <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()"><i class="material-icons">pause</i>Pause</md-button>
-                <md-button class="md-primary" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
-                <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
-                <!-- <md-button class="md-primary" aria-label="Volume down" ng-click="vm.seek()">Seek</md-button> -->
-              </div>
-            </div>
-          </md-card-content>
-        </md-card>
+<div layout="column" id="dashboard">
+  <md-toolbar class="sc-gradient">
+    <div class="md-toolbar-tools" layout="row" layout-align="space-between stretch">
+      <div flex="15" layout="row" layout-align="start center" layout-margin class="topbar-avatar">
+        <img ng-src="{{vm.user.avatar_url}}" alt="Avatar image" class="img-circle avatar-img"/>
+        <h3 class="avatar_name">{{vm.user.full_name}}</h3>
       </div>
-    </md-content>
+       <!-- <span flex></span> -->
+       <h2 layout layout-align="center center">
+         <i class="fa fa-2x fa-soundcloud" aria-hidden="true"></i>
+         <span>&nbsp; SoundClouder</span>
+       </h2>
+       <!-- <span flex></span> -->
+       <md-button ng-click="vm.logout()" layout layout-align="center center">
+         <span>Logout</span>
+         <i class="material-icons">power_settings_new</i>
+       </md-button>
+    </div>
+  </md-toolbar>
+  <div layout="row" flex>
+      <!-- <md-button class="md-raised" ng-click="getFavorites()">Get my favorites</md-button> -->
+      <md-sidenav
+        ng-click=""
+        md-component-id="left"
+        md-is-locked-open="$mdMedia('gt-sm')"
+        class="md-whiteframe-4dp" >
+
+          <md-toolbar>
+            <h1 class="md-toolbar-tools">Liked Tracks</h1>
+          </md-toolbar>
+          <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="10" min-scrollbar-length="20">
+            <md-list>
+              <md-list-item ng-repeat="track in vm.favorites" ng-click="vm.selectTrack(track)">
+                <div layout="row" layout-align="start center" layout-margin ng-class="{'selected' : track === vm.selectedTrack }">
+                  <div layout="column" layout-align="center">
+                    <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-list-img"/>
+                    <img ng-if="!track.artwork_url" src="../assets/music_record.png" alt="Avatar image" class="img-circle artwork-list-img"/>
+                  </div>
+                  <div layout="column" layout-align="center">{{track.title | TitleFilter}}</div>
+                </div>
+              </md-list-item>
+            </md-list>
+          </perfect-scrollbar>
+      </md-sidenav>
+
+      <md-content flex id="content" ng-cloak>
+        <div layout="column">
+          <md-card>
+            <md-card-content>
+              <div layout="row" layout-align="start center">
+                <img ng-if="vm.selectedTrack.artwork_url" ng-src="{{vm.selectedTrack.artwork_url}}" alt="Avatar image" class="img-circle artwork-img"/>
+                <div id="selectedTrackTitle" layout="column" layout-align="center start">
+                  <h2>{{vm.selectedTrack.title}}</h2>
+                  <h4 class="subtitle">Times played: {{vm.selectedTrack.playback_count | number}}</h4>
+                </div>
+              </div>
+            </md-card-content>
+            <md-card-actions layout="row">
+                <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Stream sound" ng-click="vm.streamSound(vm.selectedTrack)">Stream</md-button>
+            </md-card-actions>
+          </md-card>
+          <md-card>
+            <md-card-content>
+              <div id="playme">
+                <h2>Playing track: {{vm.playingTrack.title}}</h2>
+                <div layout="row">
+                  <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Play sound" ng-click="vm.playSound()"><i class="material-icons">play_arrow</i>Play</md-button>
+                  <md-button layout="row" layout-align="space-around center" class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()"><i class="material-icons">pause</i>Pause</md-button>
+                  <md-button class="md-primary" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
+                  <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
+                  <!-- <md-button class="md-primary" aria-label="Volume down" ng-click="vm.seek()">Seek</md-button> -->
+                </div>
+              </div>
+            </md-card-content>
+          </md-card>
+        </div>
+      </md-content>
+  </div>
 </div>
