--- a/css/styles.css
+++ b/css/styles.css
@@ -33,17 +33,24 @@ html, body, #dashboard{
   margin-right: 0;
 }
 
+#selectedTrackContent i{
+  color: #ff5722;
+  font-size: 54px;
+  cursor: pointer;
+}
+
 #selectedTrackTitle{
-  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #selectedTrackTitle h2{
-  margin-top: 0;
-  margin-bottom: 12px;
+  margin: 0;
+  font-size: 20px;
 }
 
 #selectedTrackTitle h4{
-  margin: 0;
+  margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .artwork-list-img{
@@ -58,11 +65,19 @@ html, body, #dashboard{
   width: 100px;
 }
 
-#content{
+.artwork-img-small{
+  width: 70px;
+}
+
+#mainContent{
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 5px;
   background-color: #f5f5f5;
+}
+
+#mainContent>div{
+  height: 100%;
 }
 
 .subtitle{
