progress bar for loading favorites added; rearranging the scripts in app.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ html, body, #dashboard{
 }
 
 #selectedTrackContent i{
-  color: #ff5722;
+  color: #536dfe;
   font-size: 54px;
   cursor: pointer;
 }
