initial d3 euqalizer visualisation added; requires the shift in logic code - play, pause, etc

--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -60,7 +60,8 @@
                   <!-- <md-button class="md-primary" aria-label="Volume down" ng-click="vm.seek()">Seek</md-button> -->
                 </div>
                 <div style="text-align: center;">
-                  <i class="material-icons" style="font-size: 420px; opacity: 0.2;">equalizer</i>
+                  <!-- <i class="material-icons" style="font-size: 420px; opacity: 0.2;">equalizer</i> -->
+                  <d3-equalizer track="vm.playingTrack.stream_url"></d3-equalizer>
                 </div>
               </div>
             </md-card-content>
