--- a/js/templates/dashboard.html
+++ b/js/templates/dashboard.html
@@ -33,7 +33,7 @@
           <md-progress-linear class="md-accent" md-mode="indeterminate" ng-if="vm.favorites.length == 0"></md-progress-linear>
           <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="10" min-scrollbar-length="20">
             <md-list>
-              <md-list-item ng-repeat="track in vm.favorites" ng-click="vm.selectTrack(track)">
+              <md-list-item ng-repeat="track in vm.favorites" ng-click="vm.selectTrack(track)" ng-dblclick="vm.streamSound(vm.selectedTrack)">
                 <div layout="row" layout-align="start center" layout-margin ng-class="{'selected' : track === vm.selectedTrack }">
                   <div layout="column" layout-align="center">
                     <img ng-if="track.artwork_url" ng-src="{{track.artwork_url}}" alt="Avatar image" class="img-circle artwork-list-img"/>
@@ -55,13 +55,13 @@
                 <div layout="row">
                   <md-button ng-if="!vm.isPlaying" layout="row" layout-align="space-around center" class="md-primary" aria-label="Play sound" ng-click="vm.playSound()"><i class="material-icons">play_arrow</i>Play</md-button>
                   <md-button ng-if="vm.isPlaying" layout="row" layout-align="space-around center" class="md-primary" aria-label="Stop sound" ng-click="vm.pauseSound()"><i class="material-icons">pause</i>Pause</md-button>
-                  <md-button class="md-accent" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
-                  <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button>
+                  <!-- <md-button class="md-accent" aria-label="Volume up" ng-click="vm.volumeUp()">Volume +</md-button>
+                  <md-button class="md-primary" aria-label="Volume down" ng-click="vm.volumeDown()">Volume -</md-button> -->
                   <!-- <md-button class="md-primary" aria-label="Volume down" ng-click="vm.seek()">Seek</md-button> -->
                 </div>
                 <div style="text-align: center;">
                   <!-- <i class="material-icons" style="font-size: 420px; opacity: 0.2;">equalizer</i> -->
-                  <d3-equalizer track="vm.playingTrack.stream_url"></d3-equalizer>
+                  <d3-equalizer track="vm.playingTrack.stream_url" pause="vm.pauseSound" play="vm.playSound" is-playing="vm.isPlaying"></d3-equalizer>
                 </div>
               </div>
             </md-card-content>
@@ -69,7 +69,7 @@
           <md-card>
             <md-card-content>
               <div id="selectedTrackContent" layout="row" layout-align="start center">
-                <i ng-if="!vm.isPlaying || vm.playingTrack.id != vm.selectedTrack.id" class="material-icons" ng-click="vm.streamOrPlay(vm.selectedTrack);">play_circle_outline</i>
+                <i ng-if="!vm.isPlaying || vm.playingTrack.id != vm.selectedTrack.id" class="material-icons" ng-click="vm.streamSound(vm.selectedTrack)">play_circle_outline</i>
                 <i ng-if="vm.isPlaying && vm.playingTrack.id == vm.selectedTrack.id" class="material-icons" ng-click="vm.pauseSound()">pause_circle_outline</i>
                 <div id="selectedTrackTitle" layout="column" layout-align="center end" flex>
                   <h2>{{vm.selectedTrack.title}}</h2>
